--- a/public.css
+++ b/public.css
@@ -17,7 +17,7 @@ html,body {
     border: none;
     padding: 10px;
     line-height: 26px;
-    background-color: blanchedalmond;
+    background-color: rgb(199, 255, 199);
     color: #0d2c40;
 }
 .button {
